customers/b02/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paper-minecraft-prod
  namespace: traefik
spec:
  ports:
    - port: 33333
      targetPort: 33333
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paper-minecraft-prod
  namespace: traefik
subsets:
  - addresses:
      - ip: 144.2.66.218
    ports:
      - port: 33333
---
apiVersion: v1
kind: Service
metadata:
  name: paper-minecraft-test
  namespace: traefik
spec:
  ports:
    - port: 33334
      targetPort: 33334
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paper-minecraft-test
  namespace: traefik
subsets:
  - addresses:
      - ip: 144.2.66.218
    ports:
      - port: 33334
---
apiVersion: v1
kind: Service
metadata:
  name: atm9-minecraft
  namespace: traefik
spec:
  ports:
    - port: 42069
      targetPort: 42069
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: atm9-minecraft
  namespace: traefik
subsets:
  - addresses:
      - ip: 144.2.66.218
    ports:
      - port: 42069
