customers/b02/traefik/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: paper-minecraft-route-prod
  namespace: traefik
spec:
  entryPoints:
    - b02-prod
  routes:
    - match: HostSNI(`*`)
      services:
        - name: b02-paper-minecraft-prod
          port: 33333
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: paper-minecraft-route-test
  namespace: traefik
spec:
  entryPoints:
    - b02-test
  routes:
    - match: HostSNI(`*`)
      services:
        - name: b02-paper-minecraft-test
          port: 33334
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: atm9-minecraft-route-prod
  namespace: traefik
spec:
  entryPoints:
    - b01a-prod
  routes:
    - match: HostSNI(`*`)
      services:
        - name: b01a-atm9-minecraft-prod
          port: 42069
